--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,6 +25,7 @@
       <td th:text="${d.name}"></td>
       <td th:text="${d.loc}"></td>
       <td th:text="${d.spec}"></td>
+      <td> <a th:href="@{/slot}" class="btn btn-primary">bookslot</a> </td>
     </tr>
     </tbody>
   </table>
