--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <title></title>
 </head>
 <body>
+<div class="container my-2">
+  <form action="search" method="post">
+
 <label for="cars">Choose a city:</label>
 
 <select name="city" id="cars">
-  <option value="hyd">Hyderabad</option>
-  <option value="che">Chennai</option>
-  <option value="vis">viskhapatnam</option>
+  <option value="hyderbad">Hyderabad</option>
+  <option value="chennai">Chennai</option>
+  <option value="viskhapatnam">viskhapatnam</option>
+  <option value="banglore">banglore</option>
 </select>
 
 <label for="cars">Choose a disease:</label>
 
 <select name="sys" id="symptoms">
-  <option value="fe">fever</option>
-  <option value="co">cold</option>
-  <option value="mo">mot</option>
+  <option value="fever">fever</option>
+  <option value="cold">cold</option>
+  <option value="ent">ent</option>
 </select>
+
+  <button type="submit" class="btn btn-info col-2"> search doctors </button>
+  </form>
+</div>
 </body>
 </html>
