--- a/src/main/resources/templates/mail.html
+++ b/src/main/resources/templates/mail.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <html>
 <body>
 <link rel="stylesheet"
@@ -45,31 +44,13 @@
         crossorigin="anonymous"></script>
 </head>
 
-<h1>Book Slot</h1>
+<h1>Show Email </h1>
 
-<form action="bookslot",method="post">
-
-
-
-
-
-    <label for="slot">Date:</label>
-    <input type="date" id="slot" name="date">
-    <label for="slottime">Time:</label>
-    <select name="time" id="slottime">
-        <option value="10:00AM">10:00AM</option>
-        <option value="11:00AM">11:00AM</option>
-        <option value="12:00AM">12:00PM</option>
-        <option value="2:00PM">2:00PM</option>
-        <option value="3:00PM">3:00PM</option>
-        <option value="4:00PM">4:00PM</option>
-        <option value="5:00PM">5:00PM</option>
-    </select>
-    <label for="docid">Doctor Id:</label>
-    <input type="number" id="docid" name="docid">
+<h3>Show an email field (allows only one email address):</h3>
+<form action="/mail" method="post">
+    <label for="email">Enter your email:</label>
+    <input type="email" id="email" name="email">
     <input type="submit">
 </form>
-
-<h4> note:please  add doctor id in doctor text box</h4>
 </body>
 </html>
