--- a/src/main/resources/templates/doclist.html
+++ b/src/main/resources/templates/doclist.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8">
+  <title>Title</title>
   <link rel="stylesheet"
         href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
@@ -53,7 +53,7 @@
         crossorigin="anonymous"></script>
 </head>
 <div class="container my-2">
-     <h1>doctors list</h1>
+  <h1>doctors list</h1>
   <table border="1" class = "table table-striped table-responsive-md">
     <thead>
     <tr>
@@ -64,7 +64,7 @@
     </tr>
     </thead>
     <tbody>
-    <tr th:each="d:${doc}">
+    <tr th:each="d:${doc1}">
       <td th:text="${d.id}"></td>
       <td th:text="${d.name}"></td>
       <td th:text="${d.loc}"></td>
