--- a/src/main/resources/templates/first.html
+++ b/src/main/resources/templates/first.html
@@ -2,12 +2,8 @@
 <html lang="en">
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-  <link rel="stylesheet"
-        href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-        crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <title></title>
 </head>
 <body>
 <link rel="stylesheet"
@@ -53,27 +49,27 @@
         crossorigin="anonymous"></script>
 </head>
 <div class="container my-2">
-     <h1>doctors list</h1>
-  <table border="1" class = "table table-striped table-responsive-md">
-    <thead>
-    <tr>
-      <th>Id</th>
-      <th>Name</th>
-      <th>location</th>
-      <th>speclist</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="d:${doc}">
-      <td th:text="${d.id}"></td>
-      <td th:text="${d.name}"></td>
-      <td th:text="${d.loc}"></td>
-      <td th:text="${d.spec}"></td>
-      <td> <a th:href="@{/slot}" class="btn btn-primary">bookslot</a> </td>
-    </tr>
-    </tbody>
-  </table>
-</div>
+  <form action="search" method="post">
 
+<label for="cars">Choose a city:</label>
+
+<select name="city" id="cars">
+  <option value="hyderbad">Hyderabad</option>
+  <option value="chennai">Chennai</option>
+  <option value="viskhapatnam">viskhapatnam</option>
+  <option value="banglore">banglore</option>
+</select>
+
+<label for="cars">Choose a disease:</label>
+
+<select name="sys" id="symptoms">
+  <option value="fever">fever</option>
+  <option value="cold">cold</option>
+  <option value="ent">ent</option>
+</select>
+
+  <button type="submit" class="btn btn-info col-2"> search doctors </button>
+  </form>
+</div>
 </body>
 </html>
