--- a/src/main/resources/templates/mail.html
+++ b/src/main/resources/templates/mail.html
@@ -44,9 +44,9 @@
         crossorigin="anonymous"></script>
 </head>
 
-<h1>Show Email </h1>
 
-<h3>Show an email field (allows only one email address):</h3>
+
+<h3>Enter mail:</h3>
 <form action="/mail" method="post">
     <label for="email">Enter your email:</label>
     <input type="email" id="email" name="email">
