--- a/src/main/resources/templates/mailsent.html
+++ b/src/main/resources/templates/mailsent.html
@@ -26,7 +26,7 @@
         <li class="nav-item active"><a class="nav-link"
                                        href="/">Home <span class="sr-only">(current)</span></a></li>
         <li class="nav-item active"><a class="nav-link"
-                                       href="doclist">Doctor List <span class="sr-only">(current)</span></a></li>
+                                       href="list">Doctor List <span class="sr-only">(current)</span></a></li>
         <li class="nav-item active"><a class="nav-link"
                                        href="sta">Book Appointment <span class="sr-only">(current)</span></a></li>
 
